--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
     <p>A spicy drink made with black team, spices, milk and honey. </p>
 
     <p>
-        <a href="mission.html">Read about our Mission</a>
+        Read all about our <a href="mission.html">Mission</a>
         <br>
         <br>
-        Read the <a title="Read all about caffeine on the Buzz" href="http://wickedlysmart.com/buzz">Caffeine Buzz</a>
+        Read the <a title="Read all about caffeine on the Buzz" target="_new" href="http://wickedlysmart.com/buzz">Caffeine Buzz</a>
+
     </p>
 
-    
 
 </body>
 </html>
