--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         Read all about our <a href="mission.html">Mission</a>
         <br>
         <br>
-        Read the <a title="Read all about caffeine on the Buzz" target="_new" href="http://wickedlysmart.com/buzz">Caffeine Buzz</a>
+        Read the <a title="Read all about caffeine on the Buzz" target="_new" href="http://wickedlysmart.com/buzz/#coffee">Caffeine Buzz</a>
 
     </p>
 
