--- a/mission.html
+++ b/mission.html
@@ -20,5 +20,8 @@
     <h1>Starbuzz Coffee's Mission</h1>
     <p>To provide all the caffeine that you need to power your life.</p>
     <p>Just drink it.</p>
+    <br>
+    <br>
+    <a href="index.html">Go Home</a>
 </body>
 </html>
