--- a/starbuzzcoffee/pages/mission.html
+++ b/starbuzzcoffee/pages/mission.html
@@ -22,6 +22,6 @@
     <p>Just drink it.</p>
     <br>
     <br>
-    <a href="index.html">Go Home</a>
+    <a href="../index.html">Go Home</a>
 </body>
 </html>
