--- a/mission.html
+++ b/mission.html
@@ -4,16 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style type="text/css">
-        body {
-            background-color: #d2b48c;
-            margin-left: 20%;
-            margin-right: 20%;
-            border: 2px dotted black;
-            padding: 10px 10px 10px 10px;
-            font-family: sans-serif;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
     <title>Mission</title>
 </head>
 <body>
